// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number should render 1`] = `
<label
  class="input default left"
>
  <input
    type="number"
    value=""
  />
</label>
`;

exports[`Number should render when disabled 1`] = `
<label
  class="input default left disabled"
>
  <input
    disabled=""
    type="number"
    value="8"
  />
</label>
`;
